Organized ALL CSS STUFF, moved them into proper css files, created separation within each CSS file, removed redundant code that did the same thing ie. margins being shifted left then right for the same elements, removed all dead code, added documentation for every CSS styling to make it clear on what everything is doing, adjusted all CSS styling that was off or inconsistent with the rest of the page,  made certain selectors include elements like date or telephone in the contact us page which had been neglected in the styling, updated the README, where possible changed margins or padding previously based on pixels into a percentage to be more flexible, fixed styling on contact us page that was applying unneccessary changes such as bottom margins between elements where linebreaks should be place in the html itself, added credits to any code not taught in class, added my own profile picture for about me, added semantics to the profile picture figures, added figcaptions to the profile pictures, and attempted to make the profile pictures line up side-by-side to some avail

--- a/style/contactUs.css
+++ b/style/contactUs.css
@@ -1,14 +1,40 @@
-/* This applies to the contact us page*/
-
-
-form> p
-/** Overwriting to remove the indent for the "* required field*" text in contact us. */
+form>p
+/* Overriding the default block indent for the "* required field*" text in contact us. */
 {
     margin-left: 0px;
 }
 
-nav table 
-/* Making the table fill the width of the screen*/
+form legend 
+ /* Making legend text bold */
 {
-    width: 100%;
+    font-weight: bold;
+}
+
+form input[type="text"], input[type="email"], input[type="date"], input[type="tel"], textarea
+/* Styling applied to text boxes in the form. Widens text boxes with padding. Adds a thin, gentlely
+ coloured border around each.  */
+{
+    padding: 10px; 
+    border: 1px solid #cccccc; 
+    border-radius: 5px;
+}
+
+form input[type="submit"], input[type="reset"] 
+/** Styling applied to the send message and clear buttons. Widens the buttons, makes the background
+colour stand out from the page, and removes the border for a cleaner design.*/
+{
+    padding: 10px 20px; 
+    background-color: #333333; 
+    color: #ffffff; 
+    border:none;
+}
+
+form input[type="submit"]:hover, input[type="reset"]:hover 
+/* Styling applied when hovering over the send message and clear buttons. Changes the background colour
+ of the button and makes the cursor to a pointer. 
+ Credit: Learned about the hover pseudoselector from https://www.shecodes.io/athena/5457 and cursor 
+ pointer from https://www.w3schools.com/cssref/pr_class_cursor.php */
+{
+    background-color: #555;
+    cursor: pointer; /* Changing cursor on hover */
 }
