--- a/style/main.css
+++ b/style/main.css
@@ -1,127 +1,69 @@
-/* This applies to all website pages*/
-th, td 
-{
-    border:1px solid;
-    text-align: center;
-    width:450px;
-}
-
-
-/* Resetting default margin and padding that we may or may not use in the future */
-body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, figure, figcaption, blockquote, dl, dd 
-{
-    margin: 0;
-    padding: 0;
-}
-
-
+/* ------------- Website-Wide Styling ------------- */
 body 
-/* Setting a base font size, font family, and line spacing  */
+/* Styling to apply to the whole website. Adjusts text size, font, and line spacing. 
+ The left margin is adjusted to give some space between the page border and the text itself. */
 {
     font-size: 16px; 
-    font-family: Georgia, Arial, sans-serif; /* Setting font family and back up fonts */
+    font-family: Georgia, Arial, sans-serif;
     line-height: 2;
-}
-
-nav
-/* Styling the navigation */ 
-{
-    background-color: #333;/*Backround color */
-    color: #fff; /*Text color */
-    padding: 10px;
-}
-
-
-nav a 
-/* Setting link color for all of them */
-/* Removing underline from links*/
-{
-    color: #ffffff;
-    text-decoration: none;
-}
-
-nav a:hover 
-/* Underlining links on hover */
-{
-    text-decoration: underline; 
-}
-
-nav td {
-    /** Makes table cells of navigation table larger for accessibility purposes */
-    padding: 10px; /* Adding padding */
-}
-
-#currentPage
-/** Sets the background color of the current page to let user know which page they're on*/
-{
-    background-color:#212e54;
-}
-
-nav td a
-/** Makes the full data cell in the navigation clickable  */
-{
-    display: block;
-}
-
-
-main 
-{
-    padding: 20px;
-    background-size: cover; /* Cover the entire background */
-    background-position: center; /* Center the background image */
+    margin-left: 2%; 
 }
 
 main p 
+/* Styling for text blocks in the website. Sets the dimensions and horizontal spacing
+ of each text block. */
 {
     display: inline-block;
-    word-wrap: break-word; /* Allow long words to be broken and wrap onto the next line */
-    max-width: 400px; /* Set the maximum width of each paragraph */
+    max-width: 400px; 
     max-height: 600px;
-    margin-bottom: 20px; /* Add bottom margin to create space between paragraphs */
     margin-right: 100px;
     margin-left: 100px;
 }
 
-main p:last-child 
+table 
+/** For both tables on the website, we want a collapsed border. */
 {
-    margin-right: 0px; /* Remove right margin from the last paragraph */
-}
-
-h1
-/* Color of heading */ 
-{
-    color: #333; 
-}
-
-legend 
- /* Making legend text bold */
-{
-    font-weight: bold;
+    border-collapse: collapse;
 }
 
 
-input[type="text"],input[type="email"], textarea
+
+/* ------------- Navigation Styling ------------- */
+nav
+/* Styling to apply to the full table. Margin and padding are for design purposes, so that
+ the gray extends to the sides of the page. The margin numbers are to negate the website-wide margin
+ without affecting it directly.*/
 {
-    width: 99%; /* Making input fields and textarea fill the width */
-    padding: 10px; 
-    border: 1px solid #cccccc; 
-    border-radius: 5px;
-    margin-bottom: 10px; 
+    background-color: #333;
+    color: #fff;    
+    padding: 20px; /* This adds that nice gray padding that extends past the table itself. */
+    margin-left: -2%;
+    margin-top:-1%;
+    margin-right:-1%
 }
 
-input[type="submit"], input[type="reset"] 
+nav table th, td
+/* Styling to apply to each cell in the navigation table. Make them bordered, centered, and
+ take up the proper spacing. Width is in pixels. A possible optimization would be to make 
+ this % scaled to properly manage all resolutions. */
 {
-    padding: 10px 20px; 
-    background-color: #333333; /* Setting background color */
-    color: #ffffff; 
-    border: none; /* Removing border */
-    border-radius: 5px; 
-    cursor: pointer; /* Changing cursor on hover */
+    border:1px solid;
+    text-align: center;
+    width:450px; 
 }
 
-input[type="submit"]:hover, input[type="reset"]:hover 
-/* Changing background color on hover */
+nav table td a
+/* Styling to apply to the links in the navigation table. Setting the colour of the
+ navigation links so that they remain a constant colour regardless of the click state.
+ This is for accessibility purposes, as the default clicked-on-purple blends poorly on gray.
+ Additionally, makes the link a block element so that the full cell is clickable. */
 {
-    background-color: #555;
+    color: #ffffff;
+    display: block;
 }
 
+nav table #currentPage
+/** Based on the current page, adjusts the background color of that cell to reflect that. */
+{
+    background-color:#212e54;
+}
